completed backend code login user and admin

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.31",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "rand-token": "^1.0.1"
   }
 }
