--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "bootstrap": "^5.0.0-beta1",
+        "bootstrap-icons": "^1.2.2",
         "casual": "^1.6.2",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
