--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "debug": "~2.6.9",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
+        "express-async-errors": "^3.1.1",
         "express-handlebars": "^5.2.0",
         "handlebars": "^4.7.6",
         "http-errors": "~1.6.3",
