--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express-handlebars": "^5.2.0",
         "handlebars": "^4.7.6",
         "http-errors": "~1.6.3",
+        "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "moment-timezone": "^0.5.31",
         "morgan": "~1.9.1",
