--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "express": "~4.16.1",
         "express-async-errors": "^3.1.1",
         "express-handlebars": "^5.2.0",
+        "express-handlebars-sections": "^1.0.1",
+        "express-mysql-session": "^2.1.5",
+        "express-numeral": "^1.0.0",
+        "express-session": "^1.17.1",
         "handlebars": "^4.7.6",
         "http-errors": "~1.6.3",
         "jquery": "^3.5.1",
@@ -24,6 +28,7 @@
         "moment-timezone": "^0.5.31",
         "morgan": "~1.9.1",
         "mysql": "^2.18.1",
+        "numeral": "^2.0.6",
         "rand-token": "^1.0.1"
     }
 }
